<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.redhat.microprofile</groupId>
	<artifactId>com.redhat.qute.ls</artifactId>
	<version>0.11.0-SNAPSHOT</version>

	<name>Qute Language Server</name>
	<description>Qute Language Server</description>
	<url>https://github.com/redhat-developer/quarkus-ls</url>
	<licenses>
		<license>
			<name>EPL-2.0</name>
			<url>https://www.eclipse.org/legal/epl-2.0/</url>
			<comments>Eclipse Public License 2.0</comments>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git@github.com:redhat-developer/quarkus-ls.git</connection>
		<developerConnection>scm:git:git@github.com:redhat-developer/quarkus-ls.git</developerConnection>
		<url>https://github.com/redhat-developer/quarkus-ls</url>
		<tag>${project.version}</tag>
	</scm>

	<developers>
		<developer>
			<id>team</id>
			<name>Red Hat Developer</name>
			<organization>Red Hat</organization>
			<organizationUrl>https://www.redhat.com</organizationUrl>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
		<dev.build.timestamp>${maven.build.timestamp}</dev.build.timestamp>
		<lsp4j.version>0.11.0</lsp4j.version>
		<qute.version>2.7.0.Final</qute.version>
		<junit.version>5.6.1</junit.version>
		<jboss.releases.repo.id>jboss-releases-repository</jboss.releases.repo.id>
		<jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
		<jboss.snapshots.repo.id>jboss-snapshots-repository</jboss.snapshots.repo.id>
		<jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>
		<jbossNexus>https://repository.jboss.org</jbossNexus>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources/</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources/</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>parse-version</id>
						<goals>
							<goal>parse-version</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors combine.children="append">
						<descriptor>src/assembly/distribution.xml</descriptor>
					</descriptors>
					<finalName>${project.artifactId}</finalName>
					<archive>
						<manifest>
							<mainClass>com.redhat.qute.ls.QuteServerLauncher</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<nexusUrl>${jbossNexus}/nexus/</nexusUrl>
					<serverId>${jboss.releases.repo.id}</serverId>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<runOrder>random</runOrder>
					<statelessTestsetReporter
						implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
						<disable>false</disable>
						<usePhrasedFileName>false</usePhrasedFileName>
						<usePhrasedTestSuiteClassName>false</usePhrasedTestSuiteClassName>
						<usePhrasedTestCaseClassName>false</usePhrasedTestCaseClassName>
						<usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
					</statelessTestsetReporter>
					<consoleOutputReporter
						implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5ConsoleOutputReporter">
						<disable>false</disable>
						<encoding>UTF-8</encoding>
						<usePhrasedFileName>false</usePhrasedFileName>
					</consoleOutputReporter>
					<statelessTestsetInfoReporter
						implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoReporter">
						<disable>false</disable>
						<usePhrasedFileName>false</usePhrasedFileName>
						<usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
						<usePhrasedClassNameInTestCaseSummary>false</usePhrasedClassNameInTestCaseSummary>
					</statelessTestsetInfoReporter>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j</artifactId>
			<version>${lsp4j.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.errorprone</groupId>
					<artifactId>error_prone_annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>animal-sniffer-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
			<version>${lsp4j.version}</version>
		</dependency>
		<dependency>
			<groupId>io.quarkus.qute</groupId>
			<artifactId>qute-core</artifactId>
			<version>${qute.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
			<id>${jboss.releases.repo.id}</id>
			<name>JBoss Releases Repository</name>
			<url>${jboss.releases.repo.url}</url>
		</repository>
		<snapshotRepository>
			<id>${jboss.snapshots.repo.id}</id>
			<name>JBoss Snapshots Repository</name>
			<url>${jboss.snapshots.repo.url}</url>
		</snapshotRepository>
	</distributionManagement>
</project>
